--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 }
 #project {
   background-color: #befce9;
+  
 }
 footer {
   display: flex;
@@ -11,4 +12,7 @@ footer {
   padding: 1px;
   background-color: #057069;
   color: #fff;
+}
+.container {
+  font-family: 'QuickSand';
 }
